--- a/arxiv/2022_12_arxiv.html
+++ b/arxiv/2022_12_arxiv.html
@@ -88,7 +88,70 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.03265">https://arxiv.org/abs/2212.03265</a></span> Quantum chaos and phase transition in the Yukawa-SYK model ***** (Yuxuan Wang)</p>
 <p class="p2"><br></p>
 <p class="p1">20221209</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.03901">https://arxiv.org/abs/2212.03901</a></span> Universal KPZ scaling in noisy hybrid quantum circuits **** (Shao-Kai Jian, Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.03901">https://arxiv.org/abs/2212.03901</a></span> Universal KPZ scaling in noisy hybrid quantum circuits **** (Shao-Kai Jian, Hong Yao)</p><br>
+<p class="p1">20221212</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.04944">https://arxiv.org/abs/2212.04944</a></span> Renormalisation Group Flows of the SYK Model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.05001">https://arxiv.org/abs/2212.05001</a></span> Non-invertible symmetries in axion electrodynamics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.05038">https://arxiv.org/abs/2212.05038</a></span> Interactions and Topology in Quantum Matter Auxiliary Field Approach &amp; Generalized SSH Models **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.04863">https://arxiv.org/abs/2212.04863</a></span> Plaquette valence bond state in spin-1/2 J1-J2 XY model on square lattice ***</p>
+<p class="p2"><br></p>
+<p class="p1">20221213</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06010">https://arxiv.org/abs/2212.06010</a></span> Topological quantum criticality of the disordered Chern insulator ** (Alexander Altland)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.05621">https://arxiv.org/abs/2212.05621</a></span> Dirac gauge theory for topological spinors in 3+1 dimensional networks</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.05839">https://arxiv.org/abs/2212.05839</a></span> Finite temperature dynamical quantum phase transition in a non-Hermitian system</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.05737">https://arxiv.org/abs/2212.05737</a></span> Phase Fluctuations in Two-Dimensional Superconductors and Pseudogap Phenomenon *** (Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06084">https://arxiv.org/abs/2212.06084</a></span> Hardware-efficient learning of quantum many-body states **** (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.06843">https://arxiv.org/abs/2205.06843</a></span> Theory of optical axion electrodynamics and application to the Kerr effect in topological antiferromagnets ***** (Junyeong Ahn, Su-Yang Xu, Ashvin Vishwanath)</p>
+<p class="p2"><br></p>
+<p class="p1">20221214</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06159">https://arxiv.org/abs/2212.06159</a></span> Unifying Constructions of Non-Invertible Symmetries (Apoorv Tiwari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06342">https://arxiv.org/abs/2212.06342</a></span> The fate of non-supersymmetric Gross-Neveu-Yukawa fixed point in two dimensions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06824">https://arxiv.org/abs/2212.06824</a></span> Collapse of Metallicity and High-Tc Superconductivity in the High-Pressure phase of FeSe0.89S0.11 *** (Amalia I. Coldea)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06190">https://arxiv.org/abs/2212.06190</a></span> IrF4: From Tetrahedral Compass Model to Topological Semimetal **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06740">https://arxiv.org/abs/2212.06740</a></span> A generalized multi-scale entanglement renormalization ansatz: More accurate conformal data from a critical lattice model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06187">https://arxiv.org/abs/2212.06187</a></span> Lectures on the string landscape and the Swampland ***** (Nathan Benjamin Agmon, Alek Bedroya, Monica Jinwoo Kang, Cumrun Vafa)</p>
+<p class="p2"><br></p>
+<p class="p1">20221215</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.07404">https://arxiv.org/abs/2212.07404</a></span> Dipolar Weyl semimetals (Shouvik Sur)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.06842">https://arxiv.org/abs/2212.06842</a></span> Non-Invertible Symmetry Webs (Apoorv Tiwari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00474">https://arxiv.org/abs/2212.00474</a></span> Symmetry Classification of Many-Body Lindbladians: Tenfold Way and Beyond</p>
+<p class="p2"><br></p>
+<p class="p1">20221216</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08017">https://arxiv.org/abs/2212.08017</a></span> Emergent flat band and topological Kondo semimetal driven by orbital-selective correlations **** (Shouvik Sur, Haoyu Hu, Silke Paschen, Jennifer Cano, Qimiao Si)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2212.08065">https://arxiv.org/abs/2212.08065</a><span class="s2"> Interacting Bose-condensed gases</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.07596">https://arxiv.org/abs/2212.07596</a></span> Strain-induced superconductivity in Sr2IrO4 (Chia-Chuan Liu, William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08671">https://arxiv.org/abs/2212.08671</a></span> Noncommutative Field Theory of the Tkachenko Mode: Symmetries and Decay Rate (Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08767">https://arxiv.org/abs/2212.08767</a></span> Electronic Density of States of a U (1) Quantum Spin Liquid with Spinon Fermi Surface. I. Orbital Magnetic Field Effects. (Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08768">https://arxiv.org/abs/2212.08768</a></span> Electronic Density of States of a U (1) Quantum Spin Liquid with Spinon Fermi Surface. II. Zeeman Magnetic Field Effects. (Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.09026">https://arxiv.org/abs/2212.09026</a></span> One, two, three, ... infinity: topological properties of thin films of Co-based shandite (Yukitoshi Motome)</p>
+<p class="p2"><br></p>
+<p class="p1">20221219</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08180">https://arxiv.org/abs/2212.08180</a></span> Network of chiral one-dimensional channels and localized states emerging in a moire ́ system</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08608">https://arxiv.org/abs/2212.08608</a></span> Non-Invertible Defects in Nonlinear Sigma Models and Coupling to Topological Orders (Po-Shen Hsin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08270">https://arxiv.org/abs/2212.08270</a></span> A Note On The Canonical Formalism For Gravity *** (Edward Witten)</p>
+<p class="p2"><br></p>
+<p class="p1">20221220</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08711">https://arxiv.org/abs/2212.08711</a></span> Drude weights in one-dimensional systems with a single defect *** (Kazuaki Takasan, Masaki Oshikawa, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.01485">https://arxiv.org/abs/2209.01485</a></span> Maxwell theory of fractons (Nicola Maggiore)</p>
+<p class="p2"><br></p>
+<p class="p1">20221221</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.09856">https://arxiv.org/abs/2212.09856</a></span> Measuring topological entanglement entropy using Maxwell relations (Cheolhee Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.09754">https://arxiv.org/abs/2212.09754</a></span> Boundary states of Three Dimensional Topological Order and the Deconfined Quantum Critical Point *** (Wenjie Ji, Nathanan Tantivasadakarn, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.10040">https://arxiv.org/abs/2212.10040</a></span> Spin Nematics Meet Spin Liquids: Exotic Quantum Phases in the Spin-1 Bilinear-Biquadratic Model with Kitaev Interactions (Nic Shannon, Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01259">https://arxiv.org/abs/2211.01259</a></span> Revealing microcanonical phases and phase transitions of strongly correlated systems via time-averaged classical shadows (Michael J. Lawler)</p>
+<p class="p2"><br></p>
+<p class="p1">20221222</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.10634">https://arxiv.org/abs/2212.10634</a></span> Ultrafast Entanglement Dynamics in Monitored Quantum Circuits (Timothy H. Hsieh, Beni Yoshida)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.10863">https://arxiv.org/abs/2212.10863</a></span> Quantum simulation of two-dimensional U(1) gauge theory in Rydberg atom arrays</p>
+<p class="p2"><br></p>
+<p class="p1">20221223</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.11740">https://arxiv.org/abs/2212.11740</a></span> Separability and entanglement of resonating valence-bond states (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.11568">https://arxiv.org/abs/2212.11568</a></span> Polyakov’s confinement mechanism for generalized Maxwell theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.11283">https://arxiv.org/abs/2212.11283</a></span> Marginal Fermi liquid at magnetic quantum criticality from dimensional confinement (Fakher F. Assaad, Matthias Vojta, Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.11395">https://arxiv.org/abs/2212.11395</a></span> Simulation of Fermionic and Bosonic Critical Points with Emergent SO(5) Symmetry (Fakher F. Assaad)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.11821">https://arxiv.org/abs/2212.11821</a></span> Fermion disorder operator at Gross-Neveu and deconfined quantum criticalities (Meng Cheng, Kai Sun, Zi Yang Meng, Fakher F. Assaad)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.07128">https://arxiv.org/abs/2207.07128</a></span> Metal to Wigner-Mott insulator transition in two-leg ladders (T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.13519">https://arxiv.org/abs/2206.13519</a></span> How quantum phases on cylinders approach the 2d limit (Steven A. Kivelson)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
