--- a/index.html
+++ b/index.html
@@ -346,6 +346,12 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</li></ul>
 	<div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
+		<span class="cvitem"> Quantum Matter Workshop (Poster) </span>
+		<span class="cvperiod">November 2022</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://events.perimeterinstitute.ca/event/30/page/100-poster-presentations">"Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments"</a> </div>	
+
+		</li><li><div>
 		<span class="cvitem"> 2022 CAP congress (Talk) </span>
 		<span class="cvperiod">June 2022</span>
 		</div>
