--- a/arxiv/2022_12_arxiv.html
+++ b/arxiv/2022_12_arxiv.html
@@ -151,7 +151,18 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.11395">https://arxiv.org/abs/2212.11395</a></span> Simulation of Fermionic and Bosonic Critical Points with Emergent SO(5) Symmetry (Fakher F. Assaad)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.11821">https://arxiv.org/abs/2212.11821</a></span> Fermion disorder operator at Gross-Neveu and deconfined quantum criticalities (Meng Cheng, Kai Sun, Zi Yang Meng, Fakher F. Assaad)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.07128">https://arxiv.org/abs/2207.07128</a></span> Metal to Wigner-Mott insulator transition in two-leg ladders (T. Senthil)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.13519">https://arxiv.org/abs/2206.13519</a></span> How quantum phases on cylinders approach the 2d limit (Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.13519">https://arxiv.org/abs/2206.13519</a></span> How quantum phases on cylinders approach the 2d limit (Steven A. Kivelson)</p><br>
+<p class="p1">20221226</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.12288">https://arxiv.org/abs/2212.12288</a></span> Localization and topological transitions in non-Hermitian SSH models</p>
+<p class="p2"><br></p>
+<p class="p1">20221227</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.12999">https://arxiv.org/abs/2212.12999</a></span> Composing parafermions: a construction of ZN fractional quantum Hall systems and a modern understanding of confinement and duality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.13102">https://arxiv.org/abs/2212.13102</a></span> Piezoelectric effect and diode effect in anapole and monopole superconductors (Youichi Yanase)</p>
+<p class="p2"><br></p>
+<p class="p1">20221229</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.13364">https://arxiv.org/abs/2212.13364</a></span> Variational Monte Carlo Study of Symmetric Mass Generation in a Bilayer Honeycomb Lattice Model (Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.13668">https://arxiv.org/abs/2212.13668</a></span> Quantum groups, non-commutative AdS2, and chords in the double-scaled SYK model</p>
+<p class="p3"><a href="https://arxiv.org/abs/2212.13851">https://arxiv.org/abs/2212.13851</a><span class="s2"> RG flows from WZW models</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
