--- a/arxiv/2023_01_arxiv.html
+++ b/arxiv/2023_01_arxiv.html
@@ -65,7 +65,36 @@
 <p class="p1">20230106</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.01884">https://arxiv.org/abs/2301.01884</a></span> Local Fluctuations in Cavity Control of Ferroelectricity (Eugene Demler)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.01964">https://arxiv.org/abs/2301.01964</a></span> Nonlinear photoconductivities and quantum geometry of chiral multifold fermions (Junyeong Ahn)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.01873">https://arxiv.org/abs/2301.01873</a></span> Free energy and specific heat near a quantum critical point of a metal **** (Erez Berg, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.01873">https://arxiv.org/abs/2301.01873</a></span> Free energy and specific heat near a quantum critical point of a metal **** (Erez Berg, Andrey V. Chubukov)</p><br>
+<p class="p1">20230109</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.02248">https://arxiv.org/abs/2301.02248</a></span> Optical Control of Slow Topological Electrons in Moir ́e Systems (Gil Refael)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.02563">https://arxiv.org/abs/2301.02563</a></span> Classicality with(out) decoherence: Concepts, relation to Markovianity, and a random matrix theory approach ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.02247">https://arxiv.org/abs/2301.02247</a></span> Quantum metric unveils defect freezing in non-Hermitian systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08814">https://arxiv.org/abs/2211.08814</a></span> Microscopic origin of local electric polarization in NiPS3 (Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15680">https://arxiv.org/abs/2211.15680</a></span> Remarks on Berry Connection in QFT, Anomalies, and Applications ***</p>
+<p class="p2"><br></p>
+<p class="p1">20230110</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.02683">https://arxiv.org/abs/2301.02683</a></span> Classifying topological neural network quantum states via diffusion maps **** (Subir Sachdev, Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.02953">https://arxiv.org/abs/2301.02953</a></span> Field Theory of Many-Body Lindbladian Dynamics **** (Alex Kamenev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.02965">https://arxiv.org/abs/2301.02965</a></span> Chiral Anomalies in 3D Spin-Orbit Coupled Metals: Electrical, Thermal, and Graevitation anomaly</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.02680">https://arxiv.org/abs/2301.02680</a></span> Goldstone bosons and fluctuating hydrodynamics with dipole and momentum conservation (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.03526">https://arxiv.org/abs/2301.03526</a></span> Thermal Hall conductivity of <span class="s2">𝛼</span>-RuCl3 ***** (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.03323">https://arxiv.org/abs/2301.03323</a></span> Dimensional Regularization in Quantum Field Theory with Ultraviolet Cutoff</p>
+<p class="p2"><br></p>
+<p class="p1">20230111</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.03628">https://arxiv.org/abs/2301.03628</a></span> Topological order in interacting semimetals (A.A. Burkov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.03602">https://arxiv.org/abs/2301.03602</a></span> D-instanton, threshold corrections, and topological string. (Manki Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20230112</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04556">https://arxiv.org/abs/2301.04556</a></span> Non-Fermi liquid behavior in a simple model of Fermi arcs and pseudogap *** (Kun Yang)</p>
+<p class="p2"><br></p>
+<p class="p1">20230113</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.14036">https://arxiv.org/abs/2212.14036</a></span> Strong CP Problem and Symmetric Mass Solution (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04703">https://arxiv.org/abs/2301.04703</a></span> Anomalous flux state in higher-order topological superconductors (Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04669">https://arxiv.org/abs/2301.04669</a></span> Kondo Lattice Model of Magic-Angle Twisted-Bilayer Graphene: Hund’s Rule, Local-Moment Fluctuations, and Low-Energy Effective Theory ***** (Andrei Bernevig, Alexei M. Tsvelik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04673">https://arxiv.org/abs/2301.04673</a></span> Symmetric Kondo Lattice States in Doped Strained Twisted Bilayer Graphene ***** (A. M. Tsvelik, B. A. Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04706">https://arxiv.org/abs/2301.04706</a></span> Aspects of ZN rank-2 gauge theory in (2+1)D: construction schemes, holonomies, and sublattice one-form symmetries ***** (Yun-Tak Oh, Salvatore D. Pace, Jung Hoon Han, Yizhi You, Hyun-Yong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.04605">https://arxiv.org/abs/2202.04605</a></span> Renormalization group study of marginal ferromagnetism</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
