--- a/arxiv/2023_01_arxiv.html
+++ b/arxiv/2023_01_arxiv.html
@@ -94,7 +94,38 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04669">https://arxiv.org/abs/2301.04669</a></span> Kondo Lattice Model of Magic-Angle Twisted-Bilayer Graphene: Hund’s Rule, Local-Moment Fluctuations, and Low-Energy Effective Theory ***** (Andrei Bernevig, Alexei M. Tsvelik)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04673">https://arxiv.org/abs/2301.04673</a></span> Symmetric Kondo Lattice States in Doped Strained Twisted Bilayer Graphene ***** (A. M. Tsvelik, B. A. Bernevig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04706">https://arxiv.org/abs/2301.04706</a></span> Aspects of ZN rank-2 gauge theory in (2+1)D: construction schemes, holonomies, and sublattice one-form symmetries ***** (Yun-Tak Oh, Salvatore D. Pace, Jung Hoon Han, Yizhi You, Hyun-Yong Lee)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.04605">https://arxiv.org/abs/2202.04605</a></span> Renormalization group study of marginal ferromagnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.04605">https://arxiv.org/abs/2202.04605</a></span> Renormalization group study of marginal ferromagnetism</p><br>
+<p class="p1">20230116</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05378">https://arxiv.org/abs/2301.05378</a></span> Dynamical Signatures of Liouvillian Flat Band</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05238">https://arxiv.org/abs/2301.05238</a></span> Quantum criticality under decoherence or weak measurement ***** (Jong Yeon Lee, Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05256">https://arxiv.org/abs/2301.05256</a></span> An effective field theory for non-maximal quantum chaos ***** (Hong Liu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05687">https://arxiv.org/abs/2301.05687</a></span> Mixed-state topological order and the errorfield double formulation of decoherence-induced transitions ***** (Yimu Bao, Ruihua Fan, Ashvin Vishwanath, Ehud Altman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05689">https://arxiv.org/abs/2301.05689</a></span> Diagnostics of mixed-state topological order and breakdown of quantum memory ***** (Ruihua Fan, Yimu Bao, Ehud Altman, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05698">https://arxiv.org/abs/2301.05698</a></span> Effective description of sub-maximal chaos: stringy effects for SYK scrambling **** (Changha Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05240">https://arxiv.org/abs/2301.05240</a></span> Spectroscopic signatures of fractionalization in octupolar quantum spin ice **** (F ́elix Desrochers, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05254">https://arxiv.org/abs/2301.05254</a></span> Oscillations in the magnetothermal conductivity of α-RuCl3: Evidence of transition anomalies *** (Young-June Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05261">https://arxiv.org/abs/2301.05261</a></span> Exact emergent higher symmetries in bosonic lattice models *** (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05684">https://arxiv.org/abs/2301.05684</a></span> Following the Higgs mode across the BCS-BEC crossover in two dimensions **** (Andrey V. Chubukov)</p>
+<p class="p2"><br></p>
+<p class="p1">20230118</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05728">https://arxiv.org/abs/2301.05728</a></span> A plane defect in the 3d O(N) model (Max A. Metlitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05732">https://arxiv.org/abs/2301.05732</a></span> Semiclassical geometry in double-scaled SYK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05721">https://arxiv.org/abs/2301.05721</a></span> Topological Quantum Dimers Emerging from Kitaev Spin Liquid Bilayer: Anyon Condensation Transition (Kyusung Hwang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05973">https://arxiv.org/abs/2301.05973</a></span> Non-Hermitian boost deformation (Shinsei Ryu)</p>
+<p class="p2"><br></p>
+<p class="p1">20230119</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07059">https://arxiv.org/abs/2301.07059</a></span> Understanding the chiral and parity anomalies without Feynman diagrams *** (Michael Stone, JiYoung Kim, Porter Howland)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07141">https://arxiv.org/abs/2301.07141</a></span> Channeling quantum criticality (Timothy H. Hsieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07177">https://arxiv.org/abs/2301.07177</a></span> HOLOGRAPHIC FLUIDS: A THERMODYNAMIC ROAD TO QUANTUM PHYSICS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07119">https://arxiv.org/abs/2301.07119</a></span> Remote detectability from entanglement bootstrap I: Kirby’s torus trick (John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07127">https://arxiv.org/abs/2301.07127</a></span> Emergent glassy behavior in a kagome Rydberg atom array *** (Subir Sachdev, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07130">https://arxiv.org/abs/2301.07130</a></span> Multipartite entanglement in two-dimensional chiral topological liquids (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.14011">https://arxiv.org/abs/2212.14011</a></span> Massless graviton in a model of quantum gravity with emergent spacetime (Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.04630">https://arxiv.org/abs/2202.04630</a></span> Valley-polarized nematic order in twisted moir ́e systems: in-plane orbital magnetism and non-Fermi liquid to Fermi liquid crossover (Ipsita Mandal, Rafael M. Fernandes)</p>
+<p class="p2"><br></p>
+<p class="p1">20230120</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07763">https://arxiv.org/abs/2301.07763</a></span> Entanglement in Tripartitions of Topological Orders: A Diagrammatic Approach **** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.03602">https://arxiv.org/abs/2301.03602</a></span> D-instanton, threshold corrections, and topological string (Manki Kim)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
