--- a/arxiv/2023_01_arxiv.html
+++ b/arxiv/2023_01_arxiv.html
@@ -125,7 +125,32 @@
 <p class="p2"><br></p>
 <p class="p1">20230120</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07763">https://arxiv.org/abs/2301.07763</a></span> Entanglement in Tripartitions of Topological Orders: A Diagrammatic Approach **** (Shinsei Ryu)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.03602">https://arxiv.org/abs/2301.03602</a></span> D-instanton, threshold corrections, and topological string (Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.03602">https://arxiv.org/abs/2301.03602</a></span> D-instanton, threshold corrections, and topological string (Manki Kim)</p><br>
+<p class="p1">20230123</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.08550">https://arxiv.org/abs/2301.08550</a></span> Superconducting fluctuations and charge-4e plaquette state at strong coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.08255">https://arxiv.org/abs/2301.08255</a></span> Entanglement in a one-dimensional critical state after measurements (Chao-Ming Jian)</p>
+<p class="p2"><br></p>
+<p class="p1">20230124</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.08884">https://arxiv.org/abs/2301.08884</a></span> Replica theory for disorder-free spin-lattice glass transition on a tree -like simplex network</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.09151">https://arxiv.org/abs/2301.09151</a></span> Superconductivity versus quadrupole density wave in CeRh2As2 ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.09628">https://arxiv.org/abs/2301.09628</a></span> Approximate higher-form symmetries, topological defects, and dynamical phase transitions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.09636">https://arxiv.org/abs/2301.09636</a></span> A Universal Theory of Spin Squeezing (Bertrand I. Halperin, Norman Y. Yao)</p>
+<p class="p2"><br></p>
+<p class="p1">20230125</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.09658">https://arxiv.org/abs/2301.09658</a></span> Apparent Kondo effect in Moiré TMD bilayers: Heavy fermions or disorder? **** (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.09681">https://arxiv.org/abs/2301.09681</a></span> Universality of critical dynamics with finite entanglement (J. E. Moore)</p>
+<p class="p2"><br></p>
+<p class="p1">20230126</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10589">https://arxiv.org/abs/2301.10589</a></span> Hubbard bands, Mott transition and deconfinement in strongly correlated systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04556">https://arxiv.org/abs/2301.04556</a></span> Non-Fermi liquid behavior in a simple model of Fermi arcs and pseudogap (Kun Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.02968">https://arxiv.org/abs/2110.02968</a></span> Pairing Instabilities of the Yukawa-SYK Models with Controlled Fermion Incoherence (Wonjune Choi, Omid Tavakol, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00014">https://arxiv.org/abs/2102.00014</a></span> Topological magnons for thermal Hall transport in frustrated magnets with bond-dependent interactions (Emily Z. Zhang, Li Ern Chern, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.14949">https://arxiv.org/abs/2208.14949</a></span> N3LO Spin-Orbit Interaction via the EFT of Spinning Gravitating Objects (Jung-Wook Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20230127</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10775">https://arxiv.org/abs/2301.10775</a></span> Collisionless dynamics of general non-Fermi liquids from hydrodynamics of emergent conserved quantities **** (Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10782">https://arxiv.org/abs/2301.10782</a></span> Multipole groups and fracton phenomena on arbitrary crystalline lattices ***** (Daniel Bulmash, Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.14343">https://arxiv.org/abs/2207.14343</a></span> Fractonic Berezinskii–Kosterlitz–Thouless transition from a renormalization group perspective *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
