--- a/arxiv/2023_01_arxiv.html
+++ b/arxiv/2023_01_arxiv.html
@@ -150,7 +150,19 @@
 <p class="p1">20230127</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10775">https://arxiv.org/abs/2301.10775</a></span> Collisionless dynamics of general non-Fermi liquids from hydrodynamics of emergent conserved quantities **** (Dominic V. Else)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10782">https://arxiv.org/abs/2301.10782</a></span> Multipole groups and fracton phenomena on arbitrary crystalline lattices ***** (Daniel Bulmash, Rahul Nandkishore)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.14343">https://arxiv.org/abs/2207.14343</a></span> Fractonic Berezinskii–Kosterlitz–Thouless transition from a renormalization group perspective *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.14343">https://arxiv.org/abs/2207.14343</a></span> Fractonic Berezinskii–Kosterlitz–Thouless transition from a renormalization group perspective *****</p><br>
+<p class="p1">20230130</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.11917">https://arxiv.org/abs/2301.11917</a></span> Everything is a quantum Ising model *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.11337">https://arxiv.org/abs/2301.11337</a></span> New critical states induced by measurement ***** (Hong Yao, Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.11458">https://arxiv.org/abs/2301.11458</a></span> Superconductivity of anomalous pseudospin **** (Han Gyeol Suh, P. M. R. Brydon, Daniel F. Agterberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.03128">https://arxiv.org/abs/2210.03128</a></span> Snowmass Topical Summary: Formal QFT</p>
+<p class="p2"><br></p>
+<p class="p1">20230131</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.11948">https://arxiv.org/abs/2301.11948</a></span> Pseudo-Goldstone modes and dynamical gap generation from order-by-thermal-disorder ***** (Michel J. P. Gingras, Jeffrey G. Rau)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2301.12676">https://arxiv.org/abs/2301.12676</a><span class="s2"> Floquet States ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.12864">https://arxiv.org/abs/2301.12864</a></span> Does Deconfined Quantum Phase Transition Have to Keep Lorentz Symmetry? Two Velocities of Spinon and String ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07763">https://arxiv.org/abs/2301.07763</a></span> Entanglement in tripartitions of topological orders: a diagrammatic approach *** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.02666">https://arxiv.org/abs/2301.02666</a></span> First Realization of Quantum Energy Teleportation on Superconducting Quantum Hardware ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
