--- a/arxiv/2023_02_arxiv.html
+++ b/arxiv/2023_02_arxiv.html
@@ -67,7 +67,36 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.07599">https://arxiv.org/abs/2110.07599</a></span> Pivot Hamiltonians as generators of symmetry and entanglement *** (Ashvin Vishwanath, Ruben Verresen)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.00777">https://arxiv.org/abs/2302.00777</a></span> Coupling a Cosmic String to a TQFT (Sungwoo Hong)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.00917">https://arxiv.org/abs/2302.00917</a></span> From Dyson Models to Many-Body Quantum Chaos</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.09636">https://arxiv.org/abs/2212.09636</a></span> Integrability for Feynman Integrals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.09636">https://arxiv.org/abs/2212.09636</a></span> Integrability for Feynman Integrals</p><br>
+<p class="p1">20230206</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.01829">https://arxiv.org/abs/2302.01829</a></span> Signatures of two- and three-dimensional semimetals from circular dichroism (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.01361">https://arxiv.org/abs/2302.01361</a></span> Revisiting the replica trick: Competition between spin glass and conventional order (Brian Swingle)</p>
+<p class="p2"><br></p>
+<p class="p1">20230207</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.02295">https://arxiv.org/abs/2302.02295</a></span> Probing single-electron scattering through a non-Fermi liquid charge-Kondo device</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.03028">https://arxiv.org/abs/2302.03028</a></span> Numerical Methods for Detecting Symmetries and Commutant Algebras (Olexei I. Motrunich)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.02906">https://arxiv.org/abs/2302.02906</a></span> Enhanced nematicity emerging from higher-order van Hove singularities</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12169">https://arxiv.org/abs/2208.12169</a></span> Unitarity of Symplectic Fermion in α-vacua with Negative Central Charge (Shinsei Ryu, Junggi Yoon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01222">https://arxiv.org/abs/2206.01222</a></span> Exactly solvable model for a deconfined quantum critical point in 1D (Michael Levin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.01944">https://arxiv.org/abs/2302.01944</a></span> Spin supplementary condition in quantum field theory, Part I : covariant SSC and physical state projection (Jung-Wook Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20230208</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.03212">https://arxiv.org/abs/2302.03212</a></span> A statistical approach to topological entanglement: Boltzmann machine representation of higher-order irreducible correlation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.12952">https://arxiv.org/abs/2301.12952</a></span> Dirac equation in curved spacetime: the role of local Fermi velocity</p>
+<p class="p2"><br></p>
+<p class="p1">20230209</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.03703">https://arxiv.org/abs/2302.03703</a></span> XY* transition and extraordinary boundary criticality from fractional exciton condensation in quantum Hall bilayer **** (Ya-Hui Zhang, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.03707">https://arxiv.org/abs/2302.03707</a></span> U(1) symmetry-enriched toric code **** (Claudio Chamon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04172">https://arxiv.org/abs/2302.04172</a></span> Non Fermi liquid behavior at flat hot spots from quantum critical fluctuations at the onset of charge- or spin-density wave order ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.03812">https://arxiv.org/abs/2302.03812</a></span> pyTDGL: Time-dependent Ginzburg-Landau in Python **</p>
+<p class="p2"><br></p>
+<p class="p1">20230210</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04842">https://arxiv.org/abs/2302.04842</a></span> An Introduction to the Theory of Spin Glasses</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04325">https://arxiv.org/abs/2302.04325</a></span> Measurement-altered Ising quantum criticality *** (Jason Alicea)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04620">https://arxiv.org/abs/2302.04620</a></span> A slave fermion interpretation of the pseudogap in doped Mott insulator ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04660">https://arxiv.org/abs/2302.04660</a></span> Doniach phase diagram for Kondo lattice model on the square and triangular lattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04864">https://arxiv.org/abs/2302.04864</a></span> Dynamic mass generation on two-dimensional electronic hyperbolic lattices (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04706">https://arxiv.org/abs/2302.04706</a></span> Non-Hermitian fermions with effective mass</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
