--- a/index_test.html
+++ b/index_test.html
@@ -63,7 +63,7 @@
 
 My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	--><br>
 	
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230119_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/01/19)</a>
+pdf version of CV: <a id="Full_CV" class="anchor_inpage" href="20230119_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/01/19)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -157,19 +157,19 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 	<div>
 	<div class="cvitemize"> Academic Affiliations </div>
 		<ul><div>
-		<li><span class="cvitem"> Department of Physics, University of Toronto</span>, Toronto, Canada
+		<li><span class="cvitem"> Department of Physics, University of Toronto </span>
 		<span class="cvperiod">November 2020 ~ Present</span>
 		</div>
 		<div class="cvitemcontent"> Postdoctoral Fellow </div>	
 		</li></ul>
 		<ul><div>
-		<li><span class="cvitem"> School of Computational Sciences, KIAS</span>, Seoul, Korea
+		<li><span class="cvitem"> School of Computational Sciences, KIAS </span>
 		<span class="cvperiod">August 2020 ~ October 2020</span>
 		</div>
 		<div class="cvitemcontent"> Visiting Scholar </div>	
 		</li></ul>
 		<ul><div>
-		<li><span class="cvitem"> Department of Physics, KAIST</span>, Daejeon, Korea
+		<li><span class="cvitem"> Department of Physics, KAIST </span>
 		<span class="cvperiod">March 2013 ~ August 2020</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program </div>	
