--- a/index_test.html
+++ b/index_test.html
@@ -39,12 +39,12 @@
 <div id="center">
 <div id="floating_menu">
 	  <ul style="display: flex; justify-content: space-between;padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto;overflow: hidde;">
-	    <li><a href="#top">Top</a></li>
+	    <li><a href="#top" style="text-decoration:none;color:var(--font-color)">Top</a></li>
 	    <!--<li><a href="#me">About me</a></li>-->
-	    <li><a href="#Full_CV">CV (PDF)</a></li>
-	    <li><a href="#publication">Publication</a></li>
-	    <li><a href="#today_arxiv">Today's arXiv</a></li>
-	    <li><a href="#title">Contact</a></li>
+	    <li><a href="#Full_CV" style="text-decoration:none;color:var(--font-color)">CV (PDF)</a></li>
+	    <li><a href="#publication" style="text-decoration:none;color:var(--font-color)">Publication</a></li>
+	    <li><a href="#today_arxiv" style="text-decoration:none;color:var(--font-color)">Today's arXiv</a></li>
+	    <li><a href="#title" style="text-decoration:none;color:var(--font-color)">Contact</a></li>
 	  </ul>
 	</div>
 	<div style="height:25px"></div>
@@ -62,8 +62,8 @@
 	Now I am finding my next position. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.<br><br>
 
 My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	--><br>
-	
-pdf version of CV: <a id="Full_CV" class="anchor_inpage" href="20230119_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/01/19)</a>
+	I am SangEun Han who is a postdoctoral fellow in Yong Baek Kim's group in University of Toronto. 
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230119_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/01/19)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -84,6 +84,19 @@ Articles related to my works:
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
 		<ul><li><div>
+		<span class="cvitem"><div class="bouncing-text">
+  <div class="sign1">N</div>
+  <div class="sign2">E</div>
+  <div class="sign3">W</div>
+  <div class="shadow"></div>
+  <!--<div class="shadow-two"></div>--><div class="paper_title">&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</div>
+</div></span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
+			<a href="https://arxiv.org/abs/2302.XXXXX">arXiv:2302.XXXXX</a>
+			<!-- <div style="overflow: auto"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><p style="margin:3px;"></p><span class="explain_paper"><img style="float:right" src="img/ce2kd.png" alt="Phase diagram of chiral symmetry breaking transitions with schematic RG flows." width=40%> We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<br></span></details><p style="margin:3px;"></p> -->
+		</li><li><div>
 		<span class="cvitem"> "Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments" </span>
 		<span class="cvperiod"></span>
 		</div>
@@ -157,19 +170,19 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 	<div>
 	<div class="cvitemize"> Academic Affiliations </div>
 		<ul><div>
-		<li><span class="cvitem"> Department of Physics, University of Toronto </span>
+		<li><span class="cvitem"> Department of Physics, University of Toronto</span>, Toronto, Canada
 		<span class="cvperiod">November 2020 ~ Present</span>
 		</div>
 		<div class="cvitemcontent"> Postdoctoral Fellow </div>	
 		</li></ul>
 		<ul><div>
-		<li><span class="cvitem"> School of Computational Sciences, KIAS </span>
+		<li><span class="cvitem"> School of Computational Sciences, KIAS</span>, Seoul, Korea
 		<span class="cvperiod">August 2020 ~ October 2020</span>
 		</div>
 		<div class="cvitemcontent"> Visiting Scholar </div>	
 		</li></ul>
 		<ul><div>
-		<li><span class="cvitem"> Department of Physics, KAIST </span>
+		<li><span class="cvitem"> Department of Physics, KAIST</span>, Daejeon, Korea
 		<span class="cvperiod">March 2013 ~ August 2020</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program </div>	
