--- a/index_test.html
+++ b/index_test.html
@@ -62,7 +62,7 @@
 	Now I am finding my next position. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.<br><br>
 
 My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	--><br>
-	I am SangEun Han who is a postdoctoral fellow in Yong Baek Kim's group in University of Toronto. 
+	I am SangEun Han who is a postdoctoral fellow in Yong Baek Kim's group in University of Toronto. My research theme is to understand strongly correlated systems, in particular, by using quantum field theory. I have interests in the non-Fermi liquid, quantum phase transition and quantum criticality.<br><br>
 <a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230119_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/01/19)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
@@ -84,16 +84,14 @@ Articles related to my works:
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
 		<ul><li><div>
-		<span class="cvitem"><div class="bouncing-text">
-  <div class="sign1">N</div>
-  <div class="sign2">E</div>
-  <div class="sign3">W</div>
-  <div class="shadow"></div>
-  <!--<div class="shadow-two"></div>--><div class="paper_title">&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</div>
-</div></span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
+		<span class="cvitem"><div class="bouncing-text" style="float: left">
+  <div class="sign1" style="float: left">N</div>
+  <div class="sign2" style="display: inline-block;">E</div>
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="shadow"></div></div><div class="paper_title" style="display: inline-block;">&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</div>
+			</span>
+		<span class="cvperiod"></span></div>
+		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
 			<a href="https://arxiv.org/abs/2302.XXXXX">arXiv:2302.XXXXX</a>
 			<!-- <div style="overflow: auto"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><p style="margin:3px;"></p><span class="explain_paper"><img style="float:right" src="img/ce2kd.png" alt="Phase diagram of chiral symmetry breaking transitions with schematic RG flows." width=40%> We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<br></span></details><p style="margin:3px;"></p> -->
 		</li><li><div>
